// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PercentGroup Component snapshots basic snapshot 1`] = `
<div
  className="percent-group"
>
  <Form.Group
    controlId="group id"
  >
    <Form.Label>
      Group Label
    </Form.Label>
    <Form.Control
      disabled={false}
      max={100}
      min={0}
      onChange={[MockFunction props.onChange]}
      step={1}
      type="number"
      value="group VALUE"
    />
  </Form.Group>
  <span
    className="input-percent-label"
  >
    %
  </span>
</div>
`;

exports[`PercentGroup Component snapshots disabled 1`] = `
<div
  className="percent-group"
>
  <Form.Group
    controlId="group id"
  >
    <Form.Label>
      Group Label
    </Form.Label>
    <Form.Control
      disabled={true}
      max={100}
      min={0}
      onChange={[MockFunction props.onChange]}
      step={1}
      type="number"
      value="group VALUE"
    />
  </Form.Group>
  <span
    className="input-percent-label"
  >
    %
  </span>
</div>
`;
